--- a/.github/workflows/master_gucchi.yml
+++ b/.github/workflows/master_gucchi.yml
@@ -23,6 +23,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm start
         npm run build --if-present
         npm run test --if-present
 
